// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render correctly 1`] = `
<div
  class="wp-components-avatar css-6ut4jc"
  data-g2-c16t="true"
  data-g2-component="Avatar"
>
  <div
    class="wp-components-view css-1b2n9ti"
    data-g2-c16t="true"
    data-g2-component="View"
  >
    <div
      class="wp-components-text wp-components-initials css-e33ko5"
      data-g2-c16t="true"
      data-g2-component="AvatarInitials"
    >
      EO
    </div>
  </div>
</div>
`;

exports[`props should render with a border 1`] = `
<div
  class="wp-components-avatar css-1wqgldz"
  data-g2-c16t="true"
  data-g2-component="Avatar"
>
  <div
    class="wp-components-view css-1b2n9ti"
    data-g2-c16t="true"
    data-g2-component="View"
  >
    <div
      class="wp-components-text wp-components-initials css-e33ko5"
      data-g2-c16t="true"
      data-g2-component="AvatarInitials"
    >
      EO
    </div>
  </div>
  <div
    class="wp-components-aspect-ratio css-owceb3"
    data-g2-c16t="true"
    data-g2-component="AspectRatio"
  >
    <img
      alt="Elsa Oldenburg"
      class="css-1tqxezo"
      data-g2-c16t="true"
      data-g2-component="AvatarImage"
      src="/elsa.png"
    />
    <div
      aria-hidden="true"
      class="css-1wfnuwc"
    />
  </div>
</div>
`;

exports[`props should render with a custom color 1`] = `
<div
  class="wp-components-avatar css-u5cday"
  data-g2-c16t="true"
  data-g2-component="Avatar"
>
  <div
    class="wp-components-view css-1b2n9ti"
    data-g2-c16t="true"
    data-g2-component="View"
  >
    <div
      class="wp-components-text wp-components-initials css-1y62vx7"
      data-g2-c16t="true"
      data-g2-component="AvatarInitials"
    >
      EO
    </div>
  </div>
  <div
    class="wp-components-aspect-ratio css-owceb3"
    data-g2-c16t="true"
    data-g2-component="AspectRatio"
  >
    <img
      alt="Elsa Oldenburg"
      class="css-1tqxezo"
      data-g2-c16t="true"
      data-g2-component="AvatarImage"
      src="/elsa.png"
    />
    <div
      aria-hidden="true"
      class="css-1wfnuwc"
    />
  </div>
</div>
`;

exports[`props should render with a custom size 1`] = `
<div
  class="wp-components-avatar css-1flnli0"
  data-g2-c16t="true"
  data-g2-component="Avatar"
>
  <div
    class="wp-components-view css-1b2n9ti"
    data-g2-c16t="true"
    data-g2-component="View"
  >
    <div
      class="wp-components-text wp-components-initials css-sna3ye"
      data-g2-c16t="true"
      data-g2-component="AvatarInitials"
    >
      EO
    </div>
  </div>
</div>
`;

exports[`props should render with a custom small size + square 1`] = `
<div
  class="wp-components-avatar css-13jqxmm"
  data-g2-c16t="true"
  data-g2-component="Avatar"
>
  <div
    class="wp-components-view css-1b2n9ti"
    data-g2-c16t="true"
    data-g2-component="View"
  >
    <div
      class="wp-components-text wp-components-initials css-1ptu7k7"
      data-g2-c16t="true"
      data-g2-component="AvatarInitials"
    >
      EO
    </div>
  </div>
</div>
`;

exports[`props should render with a custom xSmall size + square 1`] = `
<div
  class="wp-components-avatar css-1nse3gz"
  data-g2-c16t="true"
  data-g2-component="Avatar"
>
  <div
    class="wp-components-view css-1b2n9ti"
    data-g2-c16t="true"
    data-g2-component="View"
  >
    <div
      class="wp-components-text wp-components-initials css-d0ljbb"
      data-g2-c16t="true"
      data-g2-component="AvatarInitials"
    >
      EO
    </div>
  </div>
</div>
`;

exports[`props should render with an alternate shape 1`] = `
<div
  class="wp-components-avatar css-x02w1e"
  data-g2-c16t="true"
  data-g2-component="Avatar"
>
  <div
    class="wp-components-view css-1b2n9ti"
    data-g2-c16t="true"
    data-g2-component="View"
  >
    <div
      class="wp-components-text wp-components-initials css-1y62vx7"
      data-g2-c16t="true"
      data-g2-component="AvatarInitials"
    >
      EO
    </div>
  </div>
  <div
    class="wp-components-aspect-ratio css-owceb3"
    data-g2-c16t="true"
    data-g2-component="AspectRatio"
  >
    <img
      alt="Elsa Oldenburg"
      class="css-1lfl1jb"
      data-g2-c16t="true"
      data-g2-component="AvatarImage"
      src="/elsa.png"
    />
    <div
      aria-hidden="true"
      class="css-1wfnuwc"
    />
  </div>
</div>
`;

exports[`props should render with an alternate size 1`] = `
<div
  class="wp-components-avatar css-1d5apav"
  data-g2-c16t="true"
  data-g2-component="Avatar"
>
  <div
    class="wp-components-view css-1b2n9ti"
    data-g2-c16t="true"
    data-g2-component="View"
  >
    <div
      class="wp-components-text wp-components-initials css-sna3ye"
      data-g2-c16t="true"
      data-g2-component="AvatarInitials"
    >
      EO
    </div>
  </div>
</div>
`;

exports[`props should render with animateOnImageLoad disabled 1`] = `
<div
  class="wp-components-avatar css-6ut4jc"
  data-g2-c16t="true"
  data-g2-component="Avatar"
>
  <div
    class="wp-components-view css-1b2n9ti"
    data-g2-c16t="true"
    data-g2-component="View"
  >
    <div
      class="wp-components-text wp-components-initials css-e33ko5"
      data-g2-c16t="true"
      data-g2-component="AvatarInitials"
    >
      EO
    </div>
  </div>
  <div
    class="wp-components-aspect-ratio css-owceb3"
    data-g2-c16t="true"
    data-g2-component="AspectRatio"
  >
    <img
      alt="Elsa Oldenburg"
      class="css-hi149s"
      data-g2-c16t="true"
      data-g2-component="AvatarImage"
      src="/elsa.png"
    />
    <div
      aria-hidden="true"
      class="css-1wfnuwc"
    />
  </div>
</div>
`;

exports[`props should render with image src 1`] = `
<div
  class="wp-components-avatar css-6ut4jc"
  data-g2-c16t="true"
  data-g2-component="Avatar"
>
  <div
    class="wp-components-view css-1b2n9ti"
    data-g2-c16t="true"
    data-g2-component="View"
  >
    <div
      class="wp-components-text wp-components-initials css-e33ko5"
      data-g2-c16t="true"
      data-g2-component="AvatarInitials"
    >
      EO
    </div>
  </div>
  <div
    class="wp-components-aspect-ratio css-owceb3"
    data-g2-c16t="true"
    data-g2-component="AspectRatio"
  >
    <img
      alt="Elsa Oldenburg"
      class="css-1tqxezo"
      data-g2-c16t="true"
      data-g2-component="AvatarImage"
      src="/elsa.png"
    />
    <div
      aria-hidden="true"
      class="css-1wfnuwc"
    />
  </div>
</div>
`;
